[tool.poetry]
name = "coding-challenge-prep"
version = "0.1.0"
description = "Interview prep with DFS, BFS, Stacks, Queues, Caches, and DP"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
